[package]
name = "asserter"
version = "0.0.1"
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-schema = { version = "1.1.0" }
cosmwasm-std = { version = "1.1.4", features = ["iterator"] }
cw-storage-plus = "1.0.1"
schemars = "0.8.3"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = "1.0.21"
serde_json = "1.0.94"
cw-multi-test = "0.16.4"